update Characterlist.js and RegisterPage.js

--- a/src/pages/CharacterList.module.css
+++ b/src/pages/CharacterList.module.css
@@ -63,6 +63,15 @@
   margin-top: 20px;
 }
 
+.noCharacters {
+  text-align: center;
+  margin-top: 20px;
+}
+.createCharacterButton {
+  margin-top: 10px;
+}
+
+
 .errorMessage {
   color: red;
   margin: 20px;
