--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
   animation: changeBackground 15s infinite;
 }
 
