--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  animation: changeBackground 15s infinite, fadeInBackground 15s infinite; /* Animação com transição suave */
+  animation: changeBackground 15s infinite; /* Somente a animação da troca de imagem */
 }
 
 /* Animação para alternar as imagens de fundo */
@@ -28,15 +28,6 @@ body {
   }
 }
 
-/* Animação para a transição suave (fade) entre as imagens */
-@keyframes fadeInBackground {
-  0%, 100% {
-    opacity: 1; /* Imagem visível */
-  }
-  50% {
-    opacity: 0; /* Imagem invisível para a transição suave */
-  }
-}
 
 code {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
