--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -6,7 +6,7 @@
   justify-content: center;
   color: white;
   border-radius: 10px;
-  background-color: #61616196;
+  background-color: #9e9e9e;
   max-width: 600px;
   margin: 0 auto;
   margin-bottom: 220px;
