--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  animation: changeBackground 15s infinite; /* Somente a animação da troca de imagem */
+  animation: changeBackground 60s infinite; /* Duração aumentada para diminuir a rapidez da troca */
 }
 
 /* Animação para alternar as imagens de fundo */
@@ -17,22 +17,58 @@ body {
   0% {
     background-image: url('Backgroundd.png');
   }
-  33% {
+  25% {
     background-image: url('O_caramelo.png');
   }
-  66% {
+  50% {
     background-image: url('01_Cidades_inabitadas.jpg');
   }
-  100% {
+  75% {
     background-image: url('05_A_igreja.jpg');
+  }
+  100% {
+    background-image: url('Backgroundd.png'); /* Retorna à imagem inicial para o loop */
   }
 }
 
+/* Suavizando a transição de fundo usando opacidade */
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('Backgroundd.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  animation: fadeBackground 60s infinite; /* A mesma duração para alinhar com a troca de fundo */
+  z-index: -1; /* Coloca o pseudo-elemento atrás do conteúdo */
+  opacity: 0;
+}
 
-code {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif,
-    monospace;
+@keyframes fadeBackground {
+  0% {
+    opacity: 1;
+    background-image: url('Backgroundd.png');
+  }
+  25% {
+    opacity: 1;
+    background-image: url('O_caramelo.png');
+  }
+  50% {
+    opacity: 1;
+    background-image: url('01_Cidades_inabitadas.jpg');
+  }
+  75% {
+    opacity: 1;
+    background-image: url('05_A_igreja.jpg');
+  }
+  100% {
+    opacity: 1;
+    background-image: url('Backgroundd.png');
+  }
 }
 
 .video-container {
