--- a/src/index.css
+++ b/src/index.css
@@ -9,45 +9,10 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  animation: changeBackground 60s infinite; /* Duração aumentada para diminuir a rapidez da troca */
+  animation: changeBackground 30s infinite; /* Somente a animação da troca de imagem */
 }
 
 /* Animação para alternar as imagens de fundo */
-@keyframes changeBackground {
-  0% {
-    background-image: url('Backgroundd.png');
-  }
-  25% {
-    background-image: url('O_caramelo.png');
-  }
-  50% {
-    background-image: url('01_Cidades_inabitadas.jpg');
-  }
-  75% {
-    background-image: url('05_A_igreja.jpg');
-  }
-  100% {
-    background-image: url('Backgroundd.png'); /* Retorna à imagem inicial para o loop */
-  }
-}
-
-/* Suavizando a transição de fundo usando opacidade */
-body::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url('Backgroundd.png');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  animation: fadeBackground 60s infinite; /* A mesma duração para alinhar com a troca de fundo */
-  z-index: -1; /* Coloca o pseudo-elemento atrás do conteúdo */
-  opacity: 0;
-}
-
 @keyframes fadeBackground {
   0% {
     opacity: 1;
@@ -69,6 +34,13 @@ body::before {
     opacity: 1;
     background-image: url('Backgroundd.png');
   }
+}
+
+
+code {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif,
+    monospace;
 }
 
 .video-container {
