--- a/src/pages/CharacterList.module.css
+++ b/src/pages/CharacterList.module.css
@@ -76,7 +76,8 @@
   justify-content: center;
   height: 100vh;
   background-color: #2d2d2d;
-  max-width: 500px; /* Cor de fundo opcional */
+  max-width: 900px;
+  justify-items: center;
 }
 
 .createCharacterButton {
