--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -63,7 +63,7 @@ body {
 }
 
 .navbar-link:hover {
-  background-color: #67110e;
+  background-color: #00638a;
   border-radius: 5px;
   transform: translateY(-6px);
 }
