--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -7,6 +7,7 @@
   text-align: center;
   color: #fff;
   z-index: 1;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .homepage-content {
@@ -25,8 +26,8 @@
 }
 
 .homepage-title {
-  font-size: 2.5rem;
-  font-family: "Courier New", Courier, monospace;
+  font-size: 2rem;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: bold;
   margin-bottom: 20px;
 }
