--- a/src/pages/RegisterPage.css
+++ b/src/pages/RegisterPage.css
@@ -14,7 +14,7 @@ html {
 }
 
 .Register-container {
-  background-color: rgb(134, 134, 134);
+  background-color: #9e9e9e;
   padding: 30px 40px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(14, 13, 13, 0.445);
