--- a/src/pages/CharacterList.module.css
+++ b/src/pages/CharacterList.module.css
@@ -83,7 +83,6 @@
   margin-top: 10px;
 }
 
-
 .errorMessage {
   color: red;
   margin: 20px;
@@ -94,4 +93,12 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+/* Estilos para o container do botão Ko-fi */
+.kofiButtonContainer {
+  position: fixed; /* Posicionamento fixo na tela */
+  bottom: 20px; /* Distância da parte inferior da tela */
+  right: 20px; /* Distância da parte direita da tela */
+  z-index: 1000; /* Garante que ele fique sobre outros elementos */
 }
